--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,16 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ru.okmarket.okgoods.activities.MainActivity">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+    <fragment
+        android:id="@+id/goodsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        tools:layout="@layout/fragment_goods"
+        class="ru.okmarket.okgoods.fragments.GoodsFragment"/>
+
+    <fragment
+        android:id="@+id/shopMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        tools:layout="@layout/fragment_shop_map"
+        class="ru.okmarket.okgoods.fragments.ShopMapFragment"/>
 
 </LinearLayout>
