--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -1,13 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="ru.okmarket.okgoods.fragments.GoodsFragment">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="48dp">
+        android:layout_height="?attr/toolbar_size">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -16,32 +31,32 @@
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/addButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="?attr/toolbar_size"
+                android:layout_height="?attr/toolbar_size"
                 android:src="@drawable/add"
                 android:contentDescription="@string/add_good"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/deleteButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="?attr/toolbar_size"
+                android:layout_height="?attr/toolbar_size"
                 android:src="@drawable/delete"
                 android:contentDescription="@string/delete_goods"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/startButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="?attr/toolbar_size"
+                android:layout_height="?attr/toolbar_size"
                 android:src="@drawable/start"
                 android:contentDescription="@string/start"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/historyButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="?attr/toolbar_size"
+                android:layout_height="?attr/toolbar_size"
                 android:src="@drawable/history"
                 android:contentDescription="@string/history"
                 style="@style/ToolButtonStyle" />
