--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -22,7 +22,7 @@
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="?attr/toolbar_size">
+        android:layout_height="@dimen/toolbar_size">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,32 +31,32 @@
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/addButton"
-                android:layout_width="?attr/toolbar_size"
-                android:layout_height="?attr/toolbar_size"
+                android:layout_width="@dimen/toolbar_size"
+                android:layout_height="@dimen/toolbar_size"
                 android:src="@drawable/add"
                 android:contentDescription="@string/add_good"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/deleteButton"
-                android:layout_width="?attr/toolbar_size"
-                android:layout_height="?attr/toolbar_size"
+                android:layout_width="@dimen/toolbar_size"
+                android:layout_height="@dimen/toolbar_size"
                 android:src="@drawable/delete"
                 android:contentDescription="@string/delete_goods"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/startButton"
-                android:layout_width="?attr/toolbar_size"
-                android:layout_height="?attr/toolbar_size"
+                android:layout_width="@dimen/toolbar_size"
+                android:layout_height="@dimen/toolbar_size"
                 android:src="@drawable/start"
                 android:contentDescription="@string/start"
                 style="@style/ToolButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/historyButton"
-                android:layout_width="?attr/toolbar_size"
-                android:layout_height="?attr/toolbar_size"
+                android:layout_width="@dimen/toolbar_size"
+                android:layout_height="@dimen/toolbar_size"
                 android:src="@drawable/history"
                 android:contentDescription="@string/history"
                 style="@style/ToolButtonStyle" />
