--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -21,8 +21,9 @@
     </android.support.design.widget.AppBarLayout>
 
     <HorizontalScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/toolbar_size">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_size"
+        android:background="@color/colorToolbar">
 
         <LinearLayout
             android:layout_width="wrap_content"
