--- a/cpp_apps/OK_market_ru_parser/Resources.qrc
+++ b/cpp_apps/OK_market_ru_parser/Resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/Start.png</file>
+        <file>images/Stop.png</file>
     </qresource>
 </RCC>
