--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -2,7 +2,7 @@
 
     <SwitchPreference
         android:defaultValue="true"
-        android:key="show_notification"
+        android:key="SHOW_NOTIFICATION"
         android:summary="@string/pref_description_notifications_show_notification"
         android:title="@string/pref_title_notifications_show_notification" />
 
