--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -4,6 +4,6 @@
         android:key="CITY"
         android:title="@string/pref_title_general_city"
         android:summary="@string/pref_description_general_city"
-        android:defaultValue="ST_PETERSBURG" />
+        android:defaultValue="MOSCOW" />
 
 </PreferenceScreen>
