--- a/app/src/main/res/layout/activity_select_shop.xml
+++ b/app/src/main/res/layout/activity_select_shop.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ru.okmarket.okgoods.activities.SelectShopActivity">
+    tools:context="ru.okmarket.okgoods.activities.SelectShopActivity"
+    tools:openDrawer="start" >
 
     <ru.yandex.yandexmapkit.MapView
         android:id="@+id/map"
@@ -15,4 +17,17 @@
         android:layout_height="match_parent"
         android:apiKey="oFLmlTN7o4WKqoqtg8WSRJe-kh3uNWvFONhsUBz~baYzPKDfXgHp6C-wPZ0-OLgup9s6rsl4Fzn-iWsAvz8BDDDy3fb6cbSB4vlQSloXo3A=" />
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/shopsListView"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorBorder"/>
+
+    <RelativeLayout
+        android:id="@+id/shopDetailsView"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end" />
+
+</android.support.v4.widget.DrawerLayout>
