--- a/app/src/main/res/menu/menu_select_shop.xml
+++ b/app/src/main/res/menu/menu_select_shop.xml
@@ -8,6 +8,12 @@
         android:icon="@drawable/filter"
         android:title="@string/filter"
         android:orderInCategory="100"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/menu_shop_details"
+        android:icon="@android:drawable/ic_menu_more"
+        android:title="@string/shop_details"
+        android:orderInCategory="200"
+        app:showAsAction="ifRoom"/>
 
 </menu>
