--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,28 +16,34 @@
         android:orderInCategory="200"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/menu_select_shop"
+        android:icon="@drawable/select_shop"
+        android:title="@string/select_shop"
+        android:orderInCategory="300"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/menu_history"
         android:icon="@drawable/history"
         android:title="@string/history"
-        android:orderInCategory="300"
+        android:orderInCategory="400"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_update_db"
         android:icon="@drawable/update_db"
         android:title="@string/update_db"
-        android:orderInCategory="400"
+        android:orderInCategory="500"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_settings"
         android:icon="@drawable/settings"
         android:title="@string/settings"
-        android:orderInCategory="500"
+        android:orderInCategory="600"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_exit"
         android:icon="@drawable/exit"
         android:title="@string/exit"
-        android:orderInCategory="600"
+        android:orderInCategory="700"
         app:showAsAction="never"/>
 
 </menu>
