--- a/app/src/main/res/layout/activity_select_shop.xml
+++ b/app/src/main/res/layout/activity_select_shop.xml
@@ -1,34 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ru.okmarket.okgoods.activities.SelectShopActivity"
-    tools:openDrawer="start" >
+    tools:context="ru.okmarket.okgoods.activities.SelectShopActivity">
 
-    <ru.yandex.yandexmapkit.MapView
-        android:id="@+id/map"
+
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:apiKey="oFLmlTN7o4WKqoqtg8WSRJe-kh3uNWvFONhsUBz~baYzPKDfXgHp6C-wPZ0-OLgup9s6rsl4Fzn-iWsAvz8BDDDy3fb6cbSB4vlQSloXo3A=" />
+        tools:openDrawer="start">
 
-    <ListView
-        android:id="@+id/shopsListView"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/windowBackground"/>
+        <ru.yandex.yandexmapkit.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:apiKey="oFLmlTN7o4WKqoqtg8WSRJe-kh3uNWvFONhsUBz~baYzPKDfXgHp6C-wPZ0-OLgup9s6rsl4Fzn-iWsAvz8BDDDy3fb6cbSB4vlQSloXo3A=" />
 
-    <RelativeLayout
-        android:id="@+id/shopDetailsView"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:background="@color/windowBackground" />
+        <ListView
+            android:id="@+id/shopsListView"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/windowBackground"/>
 
-</android.support.v4.widget.DrawerLayout>
+        <RelativeLayout
+            android:id="@+id/shopDetailsView"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="@color/windowBackground" />
+
+    </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
