--- a/app/src/main/res/layout/activity_select_shop.xml
+++ b/app/src/main/res/layout/activity_select_shop.xml
@@ -60,7 +60,8 @@
                 android:id="@+id/shopDetailsFragment"
                 android:name="ru.okmarket.okgoods.fragments.ShopDetailsFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                tools:layout="@layout/fragment_shop_details" />
 
         </FrameLayout>
 
