--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -13,7 +13,7 @@
         android:layout_alignWithParentIfMissing="true"
         android:gravity="center_horizontal"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/shop_is_not_selected" />
+        android:text="@string/undefined_shop" />
 
     <GridLayout
         android:id="@+id/shopDetailsGridLayout"
@@ -122,6 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:text="@string/services" />
 
@@ -130,16 +131,116 @@
             android:layout_height="48dp"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/serviceClearingSettlementImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_clearing_settlement"
+                android:src="@drawable/service_clearing_settlement" />
+
+            <ImageView
+                android:id="@+id/serviceCosmeticsImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_cosmetics"
+                android:src="@drawable/service_cosmetics" />
+
+            <ImageView
+                android:id="@+id/servicePlaygroundImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_playground"
+                android:src="@drawable/service_playground" />
+
+            <ImageView
+                android:id="@+id/serviceFishIslandImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_fish_island"
+                android:src="@drawable/service_fish_island" />
+
+            <ImageView
+                android:id="@+id/serviceBakeryImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_bakery"
+                android:src="@drawable/service_bakery" />
+
+            <ImageView
+                android:id="@+id/serviceCookeryImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_cookery"
+                android:src="@drawable/service_cookery" />
+
+            <ImageView
+                android:id="@+id/serviceTaxiOrderingImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_taxi_ordering"
+                android:src="@drawable/service_taxi_ordering" />
+
+            <ImageView
+                android:id="@+id/servicePharmacyImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_pharmacy"
+                android:src="@drawable/service_pharmacy" />
+
+            <ImageView
+                android:id="@+id/serviceOrderingFoodImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_ordering_food"
+                android:src="@drawable/service_ordering_food" />
+
+            <ImageView
+                android:id="@+id/serviceDegustationImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_degustation"
+                android:src="@drawable/service_degustation" />
+
+            <ImageView
+                android:id="@+id/serviceCafeImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_cafe"
+                android:src="@drawable/service_cafe" />
+
+            <ImageView
+                android:id="@+id/serviceGiftCardsImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_gift_cards"
+                android:src="@drawable/service_gift_cards" />
+
+            <ImageView
+                android:id="@+id/serviceParkingImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_parking"
+                android:src="@drawable/service_parking" />
+
+            <ImageView
+                android:id="@+id/servicePointOfIssuingOrdersImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@string/service_point_of_issuing_orders"
+                android:src="@drawable/service_point_of_issuing_orders" />
+
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:text="@string/photos" />
 
         <LinearLayout
+            android:id="@+id/photosLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:orientation="horizontal">
