--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="textColor">#FF000000</color>
     <color name="toolbar">#FFBDBDBD</color>
     <color name="border">#FF303F9F</color>
+    <color name="selectedShop">#ffe082</color>
 </resources>
